@startuml
!theme plain
hide circle
skinparam linetype ortho

' --- Declaración de ENUMS (Reglas estrictas) ---
enum MetodoPago {
  Efectivo
  Transferencia
}

enum EstadoDomicilio {
  Asignado
  En_curso
  Entregado
  Cancelado
}

enum TipoMantenimiento {
  Tanqueo
  Taller
  Compra_Adicional
}

enum RolUsuario {
  Admin
  Domiciliario
}

' --- Entidades ---
entity "Usuario" as usuario {
  * telefono : VARCHAR <<PK>>
  --
  nombre : VARCHAR
  password_hash : VARCHAR
  rol : RolUsuario
}

entity "Cliente" as cliente {
  * telefono : VARCHAR <<PK>>
  --
  nombre : VARCHAR
  fecha_primer_registro : DATETIME
}

entity "Ubicacion" as ubicacion {
  * id_ubicacion : UUID <<PK>>
  --
  telefono_cliente : VARCHAR <<FK>>
  latitud : DECIMAL
  longitud : DECIMAL
  alias_direccion : VARCHAR
}

entity "Domicilio" as domicilio {
  * id_domicilio : UUID <<PK>>
  --
  telefono_cliente : VARCHAR <<FK>>
  telefono_domiciliario : VARCHAR <<FK>>
  id_ubicacion : UUID <<FK>>
  productos : TEXT
  precio : DECIMAL
  fecha_hora_creacion : DATETIME
  fecha_hora_entrega : DATETIME <<NULLABLE>>
  valor_recaudado : DECIMAL <<NULLABLE>>
  metodo_pago : MetodoPago <<NULLABLE>>
  estado : EstadoDomicilio
  distancia_km : DECIMAL <<NULLABLE>>
  espacio_baul : INT <<NULLABLE>>
  foto_productos_url : VARCHAR <<NULLABLE>>
  motivo_cancelacion : VARCHAR <<NULLABLE>>
}

entity "Registro_Mantenimiento" as mantenimiento {
  * id_registro : UUID <<PK>>
  --
  fecha_hora : DATETIME
  kilometraje_actual : INT
  tipo : TipoMantenimiento
  galones_ingresados : DECIMAL <<NULLABLE>>
  costo_total : DECIMAL <<NULLABLE>>
  descripcion_compras_y_taller : TEXT
}

' --- Relaciones ---
cliente ||--o{ ubicacion : "posee"
cliente ||--o{ domicilio : "solicita"
ubicacion ||--o{ domicilio : "destino de"
usuario ||--o{ domicilio : "registra/entrega"

note right of domicilio
  espacio_baul: NULL mientras estado = 'Asignado';
  valor entre 1 y 3 una vez recogido
  (CHECK espacio_baul IS NULL OR BETWEEN 1 AND 3)
  Máximo 3 domicilios "En_curso" por domiciliario,
  uno por espacio_baul
  (UNIQUE INDEX telefono_domiciliario + espacio_baul
   WHERE estado = 'En_curso')
  motivo_cancelacion obligatorio si estado = 'Cancelado'
  (CHECK)
  estado 'Asignado': el Admin creó y asignó el domicilio,
  pero el domiciliario aún no lo recoge ni elige espacio_baul
  id_ubicacion se reasigna al entregar: la ubicación GPS real
  capturada reemplaza la asignada al crear (reutiliza una ya
  guardada del cliente si coincide, o crea una nueva)
end note
@enduml